Remove overflow scrolling, button margin fix

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -276,6 +276,10 @@ label.item {
   font-weight: 700;
   transition: background 200ms ease-in-out;
 
+  &.button-block {
+    margin-bottom: 0;
+  }
+
   &:active {
     background: #096C9F;
   }
